Feature: GenerateFileSharingLink [ch16540]
